# WinToMacApps

./: Build-Objc.bat  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build-Qt.bat  build.bat  cmakegenerator.cpp  cmakegenerator.h  hello.c  macosx-toolchain.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolchaingenerator.cpp  toolchaingenerator.h
C-Example/: hello.c  main.c
ObjC-Example/: AppDelegate.h  AppDelegate.m
Qt-Example/: main.cpp
SDK/: download.bat
